# histobench

./: .gitignore  Makefile  README.md  pyproject.toml
configs/LungHist700/: config.yaml  config_subclass.yaml  moco_v2.yaml
configs/LungHist700_finetuning/: FineTuneModel_ft_schedule.yaml
configs/tcga_ut/: config.yaml
histobench/: __init__.py  dataset.py  features.py  plots.py
histobench/darya_code/: clustering.py  get_model_inference.py  moco.py
histobench/data/: draw_tile_border_on_roi.py  format_tcga_ut_split.py  torch_datasets.py
histobench/evaluation/: compute_embeddings_lunghist700.py  compute_embeddings_tcga_ut.py  evaluate_lunghist700.py  evaluate_tcag_ut.py  lunghist700_pipeline.py  make_lunghist_table.py  tcga_ut_pipeline.py
histobench/finetuning/: data_augmentations.py  evaluate_finetuned_models_lunghist700.py  evaluate_models_lunghist700_before_ft.py  finetune_lunghist700_avg_pool_with_finetuner.py  finetune_lunghist700_no_avg_pool.py  finetune_lunghist700_no_avg_pool_with_finetuner.py  generate_fold.py
histobench/modeling/: predict.py  train.py
notebooks/: check_class_distribution.ipynb  check_embeddings_with_older_ones.ipynb  reports_results_lunghist700.ipynb  reports_results_tcga_ut.ipynb
scripts/: evaluate_darya_model_on_tcga_ut.sh  evaluate_finetuned_models_lunghist700.sh  evaluate_fm_on_lunghist.sh  evaluate_fm_on_tcga_ut.sh  finetune_on_lunghist700.sh  finetune_on_lunghist700_with_ft.sh  finetune_on_lunghist700_with_ft_mocov2.sh  finetune_on_lunghist700_with_ft_resnet50.sh  run_lunghist_pipeline.sh  run_tcga_ut_pipeline.sh
(+9 files in other folders)
