[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "histobench"
version = "0.0.1"
description = "Set of tools to evaluate models that extract feature from histopathology tiles"
authors = [
  { name = "Valentin Oreiller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["histobench"]
include = ["pyproject.toml", "histobench/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["histobench"]
force-sort-within-sections = true

